--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,9 @@ target
 catalina.home_IS_UNDEFINED/
 *.versionsBackup
 *.swp
-sender/terraform/.terraform/
-*.tfstate
-*.tfstate.backup
 .project
 .classpath
 .DS_Store
-ledger/.settings
-tracker/.settings
 *.prefs
-ledger/docker/mysql-volume
-.terraform
 **/node_modules
+out/
